--- a/neurofeed/backend/requirements.txt
+++ b/neurofeed/backend/requirements.txt
@@ -13,3 +13,7 @@ gunicorn==21.2.0
 python-dateutil==2.8.2
 SQLAlchemy==2.0.27
 alembic==1.13.1 
+# NLP Dependencies
+transformers==4.30.2
+torch==2.0.1
+numpy==1.24.3 
